Fix unreferenced error

--- a/rational-functions.html
+++ b/rational-functions.html
@@ -167,7 +167,7 @@
           if (point.y !== undefined) {
             if (!withinRange(point.answer, guessPoint[0])) success = false
           } else {
-            if (!withinRAnge(point.answer, guessPoint[1])) success = false
+            if (!withinRange(point.answer, guessPoint[1])) success = false
           } 
         }
       }
