--- a/rational-functions.html
+++ b/rational-functions.html
@@ -23,7 +23,7 @@
         <a href="./index.html">home</a>
       </div>
     </div>
-    <div v-show="introduction ">
+    <div v-show="introduction">
       <p>
         So, you may be wondering, what is a rational function?
       </p>
@@ -37,7 +37,8 @@
       </p>
       <img src="assets/meme.jpg">
     </div>
-    <div v-show="!introduction">
+
+    <div v-show="!introduction" v-cloak>
       <h1>Directions:</h1>
       <p v-if="currentProblem.type === 'graph'">
         Identify the features of the following equation by dragging the dots to the correct points on the graph.
